[000106-06] test: Refactored builders, adjusted unit tests for SellerService, created unit tests for SellerController, and updated ConstantsMocks